# py-dock

./: .env  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
kaspy/: app.py
src/kaspy/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_app.py
