[project]
name = "kaspy"
version = "0.1.0"
description = "Test python app + docker CI/CD"
authors = [
    { name = "Kasor Sensei", email = "cbdiesse@gmail.com" }
]
dependencies = [
    "blinker==1.8.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "Flask==3.0.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "Werkzeug==3.0.3",
    "pytest>=8.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kaspy"]
